# SocialDigest

./: .gitignore  README.md  pyproject.toml
src/: cpanel_email_manager.py  data_sources.py  main.py  openvpn_manager.py  selenium_scraper.py  tweet_getter.py
tests/: test_data_sources.py  test_selenium_scraper.py  test_tweet_getter.py
