[project]
name = "socialdigest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "tweepy>=4.15.0",
    "twikit>=2.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
